Fixed Issue #29: Import model fails if spaces exist in file names - Rewrote ResourceURI so that is does not rely upon java.net.URI for its parsing. It   now parse the URI itself - Modified AssetManager.java to encode spaces (' ') as ('%20') in URLs to fetch assets - Fixed a hard-coded forward-slash ('/') in AssetManager.java to File.separator